[gd_scene load_steps=3 format=3 uid="uid://debug_panel_shadow_mask"]

[ext_resource type="Script" path="res://godot_ui/scripts/ui/DebugPanel.gd" id="1_debug_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_debug_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

; ============================================================
; DebugPanel - è°ƒè¯•é¢æ¿ (æŒ‰ F12 æ˜¾ç¤º/éšè—)
; ============================================================

[node name="DebugPanel" type="CanvasLayer"]
layer = 100
script = ExtResource("1_debug_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_debug_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

; ============================================================
; æ ‡é¢˜
; ============================================================
[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "ğŸ”§ Debug Panel (F12)"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

; ============================================================
; çŠ¶æ€æ˜¾ç¤ºåŒºåŸŸ
; ============================================================
[node name="StatusSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatusTitle" type="Label" parent="Panel/MarginContainer/VBox/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€æ¸¸æˆçŠ¶æ€ã€‘"

[node name="PhaseLabel" type="Label" parent="Panel/MarginContainer/VBox/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Phase: MENU"

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBox/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 12
text = "Score: 0 | Stage: 1
Masked: Yes | Shattered Kills: 0
Fever: 0.0% | Active: No"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

; ============================================================
; æ¸¸æˆæµç¨‹æ§åˆ¶
; ============================================================
[node name="FlowSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="FlowTitle" type="Label" parent="Panel/MarginContainer/VBox/FlowSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€æ¸¸æˆæµç¨‹ã€‘"

[node name="FlowButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox/FlowSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StartGameBtn" type="Button" parent="Panel/MarginContainer/VBox/FlowSection/FlowButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "å¼€å§‹æ¸¸æˆ"

[node name="GameOverBtn" type="Button" parent="Panel/MarginContainer/VBox/FlowSection/FlowButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "æ¸¸æˆç»“æŸ"

[node name="GoToMenuBtn" type="Button" parent="Panel/MarginContainer/VBox/FlowSection/FlowButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "è¿”å›èœå•"

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

; ============================================================
; æ¸¸æˆçŠ¶æ€æ§åˆ¶
; ============================================================
[node name="StateSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StateTitle" type="Label" parent="Panel/MarginContainer/VBox/StateSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€çŠ¶æ€æ§åˆ¶ã€‘F1-F6 å¿«æ·é”®"

[node name="StateRow1" type="HBoxContainer" parent="Panel/MarginContainer/VBox/StateSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddScoreBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow1"]
layout_mode = 2
size_flags_horizontal = 3
text = "+Score (F1)"

[node name="AddStageBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow1"]
layout_mode = 2
size_flags_horizontal = 3
text = "+Stage (F2)"

[node name="StateRow2" type="HBoxContainer" parent="Panel/MarginContainer/VBox/StateSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShatterMaskBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow2"]
layout_mode = 2
size_flags_horizontal = 3
text = "ç ´ç¢é¢å…· (F3)"

[node name="AddShatteredKillBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow2"]
layout_mode = 2
size_flags_horizontal = 3
text = "+é‡å¡‘ (F4)"

[node name="StateRow3" type="HBoxContainer" parent="Panel/MarginContainer/VBox/StateSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddFeverBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow3"]
layout_mode = 2
size_flags_horizontal = 3
text = "+Fever (F5)"

[node name="ActivateFeverBtn" type="Button" parent="Panel/MarginContainer/VBox/StateSection/StateRow3"]
layout_mode = 2
size_flags_horizontal = 3
text = "æ¿€æ´» Fever"

[node name="HSeparator4" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

; ============================================================
; éŸ³é‡æ§åˆ¶
; ============================================================
[node name="VolumeSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VolumeTitle" type="Label" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€éŸ³é‡æ§åˆ¶ã€‘"

[node name="MasterVolumeLabel" type="Label" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "ä¸»éŸ³é‡"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="BGMVolumeLabel" type="Label" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "BGM éŸ³é‡"

[node name="BGMVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "éŸ³æ•ˆéŸ³é‡"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="AudioButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayBGMBtn" type="Button" parent="Panel/MarginContainer/VBox/VolumeSection/AudioButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "æ’­æ”¾ BGM"

[node name="StopBGMBtn" type="Button" parent="Panel/MarginContainer/VBox/VolumeSection/AudioButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "åœæ­¢ BGM"

[node name="SFXButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox/VolumeSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayKillSFXBtn" type="Button" parent="Panel/MarginContainer/VBox/VolumeSection/SFXButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "å‡»æ€éŸ³æ•ˆ"

[node name="PlayDashSFXBtn" type="Button" parent="Panel/MarginContainer/VBox/VolumeSection/SFXButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "å†²åˆºéŸ³æ•ˆ"

[node name="HSeparator5" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

; ============================================================
; æ’è¡Œæ¦œæ§åˆ¶
; ============================================================
[node name="LeaderboardSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LeaderboardTitle" type="Label" parent="Panel/MarginContainer/VBox/LeaderboardSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€æ’è¡Œæ¦œã€‘"

[node name="LeaderboardButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox/LeaderboardSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddTestScoreBtn" type="Button" parent="Panel/MarginContainer/VBox/LeaderboardSection/LeaderboardButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "æ·»åŠ æµ‹è¯•æ•°æ®"

[node name="ClearLeaderboardBtn" type="Button" parent="Panel/MarginContainer/VBox/LeaderboardSection/LeaderboardButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "æ¸…ç©ºæ’è¡Œæ¦œ"

; ============================================================
; è®¾ç½®æ§åˆ¶
; ============================================================
[node name="SettingsSection" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SettingsTitle" type="Label" parent="Panel/MarginContainer/VBox/SettingsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ã€è®¾ç½®ã€‘"

[node name="SettingsButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox/SettingsSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SaveSettingsBtn" type="Button" parent="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "ä¿å­˜è®¾ç½®"

[node name="ResetSettingsBtn" type="Button" parent="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "é‡ç½®è®¾ç½®"

[node name="ToggleFullscreenBtn" type="Button" parent="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "å…¨å±åˆ‡æ¢"

; ============================================================
; æŒ‰é’®ä¿¡å·è¿æ¥
; ============================================================
[connection signal="pressed" from="Panel/MarginContainer/VBox/FlowSection/FlowButtons/StartGameBtn" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/FlowSection/FlowButtons/GameOverBtn" to="." method="_on_game_over_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/FlowSection/FlowButtons/GoToMenuBtn" to="." method="_on_go_to_menu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow1/AddScoreBtn" to="." method="_on_add_score_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow1/AddStageBtn" to="." method="_on_advance_stage_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow2/ShatterMaskBtn" to="." method="_on_shatter_mask_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow2/AddShatteredKillBtn" to="." method="_on_add_shattered_kill_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow3/AddFeverBtn" to="." method="_on_add_fever_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/StateSection/StateRow3/ActivateFeverBtn" to="." method="_on_activate_fever_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/VolumeSection/AudioButtons/PlayBGMBtn" to="." method="_on_play_bgm_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/VolumeSection/AudioButtons/StopBGMBtn" to="." method="_on_stop_bgm_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/VolumeSection/SFXButtons/PlayKillSFXBtn" to="." method="_on_play_kill_sfx_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/VolumeSection/SFXButtons/PlayDashSFXBtn" to="." method="_on_play_dash_sfx_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/LeaderboardSection/LeaderboardButtons/AddTestScoreBtn" to="." method="_on_add_test_score_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/LeaderboardSection/LeaderboardButtons/ClearLeaderboardBtn" to="." method="_on_clear_leaderboard_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons/SaveSettingsBtn" to="." method="_on_save_settings_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons/ResetSettingsBtn" to="." method="_on_reset_settings_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/SettingsSection/SettingsButtons/ToggleFullscreenBtn" to="." method="_on_toggle_fullscreen_pressed"]
